--- a/demo/my-portfolio/package.json
+++ b/demo/my-portfolio/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
