a few project responsiveness adjustments

--- a/demo/my-portfolio/.env
+++ b/demo/my-portfolio/.env
@@ -1,3 +1,4 @@
+REACT_APP_UNSPLASH_ACCESS_KEY=pAzoL5qUFSuX0I_LnkSbQ7NOiC_kbZUyg86QxIusBEc
 REACT_APP_EMAILJS_SERVICE_ID=Ap-dxJdPudJfm_JV8
 REACT_APP_EMAILJS_TEMPLATE_ID=template_m4jyvav
 REACT_APP_EMAILJS_USER_ID=Ap-dxJdPudJfm_JV8
