update repo name

--- a/demo/my-portfolio/package.json
+++ b/demo/my-portfolio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "https://RiveraSonoely-FS.github.io/SonoelyMerry_Portfolio",
+  "homepage": "https://MerrySonoely-FS.github.io/SonoelyMerry_Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
