--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://RiveraSonoely-FS.github.io/2412-wdv349-RiveraSonoely",
+  "homepage": "https://merrysonoely-fs.github.io/SonoelyMerry-Portfolio/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build"
