--- a/package.json
+++ b/package.json
@@ -1,31 +1,52 @@
 {
-  "name": "yymm-wdv349",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "homepage": "https://merrysonoely-fs.github.io/SonoelyMerry-Portfolio/",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "my-portfolio",
+  "homepage": "https://MerrySonoely-FS.github.io/SonoelyMerry_Portfolio",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "cli": "^1.0.1",
-    "cookie": "^1.0.2",
-    "emailjs-com": "^3.2.0",
-    "gh": "^2.8.9",
+    "@emailjs/browser": "^4.4.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "emailjs": "^4.0.3",
+    "express": "^4.21.2",
     "ghpages": "^0.0.10",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.3.0"
   }
 }
