Added index.html for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-portfolio",
-  "homepage": "https://MerrySonoely-FS.github.io/SonoelyMerry_Portfolio",
+  "homepage": "https://merrysonoely-fs.github.io/SonoelyMerry-Portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
